css/main.css
@import url('https://fonts.googleapis.com/css?family=La+Belle+Aurore|Raleway:300|Raleway:600');

html {
  font-size: 12px;
}

* {
  box-sizing: border-box;
  margin: 0;
  vertical-align: middle;
  font-family: 'Raleway', sans-serif;
}

body {
  height: vh;
  width: vw;
}

.modal {
  display: flex;
  position: fixed;
  z-index: 2;
  /* display: none; */
  width: 100vw;
  height: 100vh;
  background-color: rgba(0,0,0,0.3);
  align-items: flex-start;
  justify-content: center;
  visibility: hidden;
  overflow-y: scroll;

}

#menu {
  position: relative;
  background-color: rgb(250, 2250, 255, 0.9);
  padding: 1vmin;
  display: grid;
  grid-template-columns: 80vw;
  grid-template-rows: auto auto 80vw auto;
  grid-template-areas:
    "meta"
    "player"
    "record"
    "submit";
  font-family: 'La Belle Aurore', cursive;
  min-height: 0;
}

#menu .menu-subblock {
  display: flex;
  justify-content: space-between;
  margin: .25em;
}

#game-meta {
  grid-area: meta;
  display: flex;
  flex-direction: column;
}

.menu-heading, content, #instructions, div[data-player-meta] label {
  font-family: 'Raleway', sans-serif;
}

h1 {
  font-size: 140%;
  font-weight: 600;
}

h4 {
  font-weight: 600;
  margin: 1em .25em 1em .25em;
  font-size: 110%;
}

#player-meta {
  grid-area: player;
  display: flex;
  justify-items: stretch;
  flex-direction: column;
}

#player-meta span[id$="rank"] {
  margin: 0 2em;
}

#player-meta input[type="button"] {
  margin: .25em;
}

#player-meta * .menu-line {
  display: flex;
  flex-flow: row nowrap;
  align-items: baseline;
  justify-items: flex-start;
}

div[data-player-meta] {
  width: 100%;
  justify-self: stretch;
}

div[data-player-meta] input[type="text"] {
  width: 90%;
  justify-self: stretch;
}

div[data-player-meta] input {
  margin: 1vmin;
}

#confirm {
  visibility: hidden;
}

div[data-player-meta] label {
  margin: .25em;
  font-size: 100%;
}

#game-record-space {
  grid-area: record;
}

#instructions {
  padding: .5em;
  line-height: 1.5;
  overflow: scroll;
  height: 100%;
  width: 100%
}

#instructions, #game-record{
border: 2px solid black;
height: 1;
}

#instructions:::-webkit-scrollbar-track {
  border: 1px solid rgba(0,0,0,0.3);
}

#game-record {
  visibility: hidden;
}

#game-update-space {
  grid-area: submit;
  margin: .5em;
  display: flex;
  justify-content: space-between;
}

content {
  background-color: #61a6c2;
  display: flex !important;
  flex-direction: column; 
  justify-content: space-between !important;
  height: 100vh;
  width: 100vw;
}

.player-pos {
  display: flex;
  align-items: center;
  justify-content: space-around;
  flex: 5;
  height: 9vmin;
}

#game-hud p {
  font-size: 130%;
  width: 50%;
  order: 0;
  width: 10vh;
  background-color: rgba(0,0,0,0.3);
  padding: 1vh;
  color: #fff;
  cursor: pointer;
  visibility: hidden;
}

.player-pos#black-pos {
  flex-direction: row-reverse;
  justify-self: flex-end;
}

#kifu {
  order: 0;
  height: 10vh;
  width: 8vh;
  background-color: #FFF;
  transform: rotate(-20deg);
}

#kifu table {
  
}

.bowl {
  order: -1;
  margin: 1vh;
  height: 10vh;
  width: 10vh;
  /* border: solid black; */
  border-radius: 50%;
  background-color: rgb(116, 48, 17);
  box-shadow: -1vmin 2vmin 3vmin rgba(83, 53, 35, 0.61);
  display: flex;
  align-items: center;
  justify-content: center;
}

.bowl p {
  display: none;
}

.bowl[data-turn]:hover p {
  display: block;
  color: #FFF;
  background-color: rgba(0,0,0,0.3);
  padding: .5em;
  cursor: grab;
}

.bowl[data-turn] {
  box-shadow: 0 0 3vh 3vh rgb(255, 175, 2);
}

.caps-space {
  color: #FFF;
  margin: 1vh;
  height: 6vh;
  width: 6vh;
  border-radius: 50%;
  background-color: rgb(116, 48, 17);
  box-shadow: -0.5vmin 1vmin 3vmin rgba(83, 53, 35, 0.61);
  display: flex;
  align-items: center;
  justify-content: center;
}

.caps-space :first-child {
  display: none;
}

.bowl[data-turn] + .name-space .caps-space:hover :first-child {
  display: block;
  position: absolute;
  background-color: rgba(0,0,0,0.7);
  padding: .5em;
  cursor: grab;
}

.name-space {
  order: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.name-space h4 {
  font-size: 120%;
  color: rgb(255,240,230)
}

#board-container {
  width: 100%;
  display: grid;
  grid-template-areas: 100%;
  grid-template-columns: 100%;
  grid-template-areas:
    "board";
}

#board-underlay {
  grid-area: board;
  background-color: rgb(255, 255, 255);
  width: 100%;
  height: 100%;
}

#board-space {
  grid-area: board;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  background-color: rgba(234, 178, 78, 1);
  padding: 1vmin;
  z-index: 1;
  box-shadow: -2vmin 4vmin 3vmin rgba(145, 92, 23, 0.5);
  flex: 1;
}


#board-space table {
  display: flex;
  align-items: stretch;
  justify-content: space-between;
  margin: auto;
}

#board-space td {
  height: 6vmin;
  width: 6vmin;
  background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%, rgba(0,0,0,0) 99%, #000 100%);
  border-radius: 50% solid black;
  color: black;
  margin: auto;
  padding: 0;
  vertical-align: middle;
}

#board-space td.top {
  background: conic-gradient( rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%);
}

#board-space td.btm {
  background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%, rgba(0,0,0,0) 99%, #000 100%); 
}

#board-space td.lft {
  background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%, rgba(0,0,0,0) 99%, #000 100%);
}

#board-space td.rgt {
  background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%, rgba(0,0,0,0) 99%, #000 100%);
}

#board-space td.top.lft {
  background: conic-gradient( rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%);
}

#board-space td.top.rgt {
  background: conic-gradient( rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76% );
}

#board-space td.btm.lft {
  background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 99%, #000 100%);
}

#board-space td.btm.rgt {
  background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%, rgba(0,0,0,0) 99%, #000 100%);
}

#board-space td * * div.hoshi { /* to be added later */
  background: radial-gradient(circle farthest-corner at center, #000 0%, #000 30%, rgba(0,0,0,0) 50%);
  z-index: 3;
  width: 100%;
  height: 100%
}

td .stone {
  width: 85%;
  height: 85%;
  border-radius: 50%;
  margin: auto;
  vertical-align: middle;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
td .stone .dot {
  width: 35%;
  height: 35%;
  border-radius: 50%;
  margin: auto;
  vertical-align: middle;
}

td .stone[data-stone="ko"] {
  background-color: transparent;
  border: 1vmin solid red;
}
td .stone[data-stone="white"] {
  background-color: white;
}
td .stone[data-stone="black"] {
  background-color: black;
}
td .stone[data-stone="none"] {
  background-color: transparent;
}
td .dot[data-dot="white"] {
  background-color: white;
}
td .dot[data-dot="black"] {
  background-color: black;
}
td .dot[data-dot="none"] {
  background-color: transparent;
}
td .dot[data-dot="dame"] {
  background-color: purple;
}
td .dot .seki {

}

@media only screen and (min-width: 591px) {

  #player-meta {
    flex-direction: row;
  }

  div[data-player-meta] {
    width: 50%;
  }

  #menu {
    grid-template-columns: 60vw;
    grid-template-rows: auto auto 60vw auto;
  }
}

@media only screen and (min-width: 500px) {

  html {
    font-size: 14px;
  }

  .player-pos {
    height: 14vh;
  }
  
  

}

